--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <section class="bg-gradient-to-br from-pink-600 to-pink-400 text-white py-20">
     <div class="max-w-6xl mx-auto text-center px-4">
       <h2 class="text-4xl font-extrabold mb-4">¡Examen -David Tobar!</h2>
-      <p class="text-lg">Laptops, PCs, periféricos y más al mejor precio</p>
+      <p class="text-lg">Hello word</p>
      </div>
   </section>
   <footer class="bg-gray-900 border-t border-gray-700 py-6 mt-12">
